[EME] Solve a couple of compiler warnings https://bugs.webkit.org/show_bug.cgi?id=174020

Reviewed by Michael Catanzaro.

* Modules/encryptedmedia/CDM.cpp:
(WebCore::CDM::isPersistentType): Added default return and
assertion.
* Modules/encryptedmedia/MediaKeySession.cpp:
(WebCore::MediaKeySession::updateKeyStatuses): This warning was
already solved but I think adding an assertion for the default
case can help catch errors in the future.


Canonical link: https://commits.webkit.org/190968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219116 268f45cc-cd09-0410-ab3c-d52691b4dbfc